<resources>
    <string name="app_name">Android Lab 2</string>
    <string name="toast_message">Here is more information</string>
    <string name="Look_at_Top">Look at my GUI</string>
    <string name="Click_Button">CLICK HERE</string>
    <string name="Check_Box">Check this out!</string>
    <string name="On_Off">Switch on / off</string>
    <string name="Edit_Hint">Type Here</string>
    <string name="hello_message" />
    <string name="ButtonText" />
</resources>
