<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@string/Look_at_Top"
        android:textSize="30dp"
        ></TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
    <Button
        android:id="@string/Click_Button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:onClick="displayToastMsg"></Button>

    <CheckBox
        android:id="@string/Check_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"></CheckBox>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:src="@drawable/flag"></ImageButton>

        <Switch
            android:id="@string/On_Off"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"></Switch>
    </LinearLayout>

    <EditText
        android:hint="@string/Edit_Hint"
        android:inputType="textPersonName|textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></EditText>

</LinearLayout>